--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.jsx" defer></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Vite + React</title>
+    <title>Mein Shop</title>
   </head>
   <body>
     <div id="root"></div>
